--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,14 @@
   height: 100%;
   min-height: 80vh;
 }
+
+fieldset {
+  margin-top: 20px;
+}
+
+.pure-form fieldset {
+  margin: 10px 10px 10px 10px;
+  padding: 0.35em 0 0.75em;
+  border: 0;
+  display: flex;
+}
