--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,16 @@ fieldset {
   border: 0;
   display: flex;
 }
+.fontSize{
+  
+ text-align: center  ;
+  font-weight:bolder ;
+  font-size: x-large;
+
+
+}
+#titleFont{ font-size: 50px;
+
+
+}
+
