--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 #map {
+  float: left;
+  width: 80%;
   height: 100%;
   min-height: 65vh;
   margin-left: 10px;
@@ -15,20 +17,26 @@ fieldset {
   border: 0;
   display: flex;
 }
-.fontSize{
-  
- text-align: center  ;
-  font-weight:bolder ;
+.fontSize {
+  text-align: center;
+  font-weight: bolder;
   font-size: x-large;
-
-
 }
-#titleFont{ font-size: 50px;
-
-
+#titleFont {
+  font-size: 50px;
 }
 
 .pure-menu-link {
   color: black;
   background-color: gold;
+}
+.card {
+  display: contents;
+}
+.image {
+  width: 175px;
+  height: 175px;
+}
+.media {
+  display: block;
 }
