adds footer and a little css styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,12 @@ fieldset {
 .media {
   display: block;
 }
-.backgroundColor{
-  
-  background-color: #447232 95% 100% ;
+.backgroundColor {
+  background-color: #447232 95% 100%;
+}
+
+footer {
+  padding: 1em;
+  text-align: center;
+  border-top: gray solid 3px;
 }
