--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,13 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
 }
+.card1 {
+  background-color: #fff;
+  max-width: 360px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border-radius: 2rem;
+  box-shadow: 0px 1rem 1.5rem rgba(0,0,0,0.5);
+  
+}
