--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,3 +86,12 @@ body {
   justify-content: center;
   box-sizing: border-box;
 }
+.card1 .banner svg {
+  background-color: #fff;
+  width: 8rem;
+  height: 8rem;
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.3);
+  border-radius: 50%;
+  transform: translateY(50%);
+  transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
