--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,6 @@ body {
   transform: translateY(50%);
   transition: transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
+.card1 .banner svg:hover {
+  transform: translateY(50%) scale(1.3);
+}
