--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,13 @@ body {
 .card1 .banner svg:hover {
   transform: translateY(50%) scale(1.3);
 }
+.card1 .menu {
+  width: 100%;
+  height: 5.5rem;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  position: relative;
+  box-sizing: border-box;
+}
