--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ fieldset {
 .media {
   display: block;
 }
-body {
+.body {
   font-size: 16px;
   color: #404040;
   font-family: Montserrat, sans-serif;
