--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ fieldset {
   color: inherit;
   font: inherit;
   font-weight: bold;
-  background-color: #ffd01a;
+  background-color: gold;
   width: 100%;
   border: none;
   padding: 1rem;
@@ -185,15 +185,19 @@ fieldset {
   transition: background-color 100ms ease-in-out, transform 200ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 .card1 .actions .follow-btn button:hover {
-  background-color: #efb10a;
+  background-color:gold;
   transform: scale(1.1);
 }
 .card1 .actions .follow-btn button:active {
-  background-color: #e8a200;
+  background-color: gold;
   transform: scale(1);
 }
 .card1 .desc {
   text-align: justify;
   padding: 0 2rem 2.5rem;
   order: 100;
+}
+#aboutUs{
+  margin-left: 60px;
+  text-align: center;
 }
