--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
 
 #map {
-  float: left;
   width: 80%;
   height: 100%;
   min-height: 65vh;
@@ -11,6 +10,10 @@
 
 #map::after {
   clear: both;
+}
+
+main {
+  display: flex;
 }
 
 fieldset {
