adds some styling to search button, radii button, and adds margin to top of map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
   min-height: 65vh;
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 10px;
 }
 
 #map::after {
@@ -238,8 +239,10 @@ footer {
 }
 
 #radiusLabel {
+  position: relative;
   border-radius: 10px;
   margin: 3px;
+  top: 2px;
 }
 
 .radius-option:hover {
@@ -247,7 +250,9 @@ footer {
 }
 
 #search-button {
+  position: relative;
   border-radius: 15px;
+  right: 673px;
 }
 
 .content {
