--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ fieldset {
   padding: 0.35em 0 0.75em;
   border: 0;
   display: flex;
+  width: 44%;
 }
 .fontSize {
   text-align: center;
@@ -39,6 +40,10 @@ fieldset {
 .pure-menu-link {
   color: black;
   background-color: gold;
+}
+
+.pure-menu-heading {
+  background-color: lemonchiffon;
 }
 
 .navbar {
@@ -227,6 +232,7 @@ footer {
   padding: 1em;
   text-align: center;
   border-top: grey solid 3px;
+  background-color: lemonchiffon;
 }
 
 #iconImage {
@@ -250,9 +256,7 @@ footer {
 }
 
 #search-button {
-  position: relative;
   border-radius: 15px;
-  right: 673px;
 }
 
 .content {
