removed and added new style to the FAQ page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,3 +261,11 @@ footer {
   display: flex;
   padding: 20px;
 }
+.faqStlying{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  border-radius: 5px;
+  text-align: center;
+
+}
