completed the faq page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,9 +269,19 @@ footer {
   text-align: center;
   margin:auto;
   margin: top 30px;
+  background-color: gold;
   
   
 
 }
 .faqStlying:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2)}
+  
+  
+  #lineStyling{
+    text-align: left;
+  }
+
+  #titleFaq{
+    text-align: center;
+  }
