--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,7 +269,7 @@ footer {
   text-align: center;
   margin:auto;
   margin: top 30px;
-  background-color: gold;
+  background-color: lemonchiffon;
   
   
 
