--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ h4 {
   padding: 0.5em;
   font-weight: lighter;
 }
-faqStlying{
+.faqStlying{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
@@ -310,5 +310,7 @@ faqStlying{
 
   #titleFaq{
     text-align: center;
+    margin-top: 50PX;
+    margin-bottom: 50PX;
   }
 
