changed some styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,3 +314,9 @@ h4 {
     margin-bottom: 50PX;
   }
 
+
+  #titleAboutus{
+    text-align: center;
+    margin-top: 50PX;
+    margin-bottom: 50PX;
+  }
