--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,7 @@ h4 {
 .placeinfo {
   font-weight: lighter;
   flex-direction: column;
+  display: flex;
 }
 .faqStlying {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
